v2.3.0/_sources/plugins/self_registered_portal_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.self_registered_portal_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.self_registered_portal_info module -- Information module for Self Registered Portal
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.3.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.self_registered_portal_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Self Registered Portal.
- Get Self Registered Portal by id.
- This API allows the client to get a self registered portal by ID.
- This API allows the client to get all the self registered portals.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk >= 2.0.1
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filter"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-filter:

      .. rst-class:: ansible-option-title

      **filter**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filter" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Filter query parameter. <br/> **Simple filtering** should be available through the filter query string parameter. The structure of a filter is a triplet of field operator and value separated with dots. More than one filter can be sent. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the "filterType=or" query string parameter. Each resource Data model description should specify if an attribute is a filtered field. <br/> Operator | Description <br/> ------------|----------------- <br/> EQ | Equals <br/> NEQ | Not Equals <br/> GT | Greater Than <br/> LT | Less Then <br/> STARTSW | Starts With <br/> NSTARTSW | Not Starts With <br/> ENDSW | Ends With <br/> NENDSW | Not Ends With <br/> CONTAINS | Contains <br/> NCONTAINS | Not Contains <br/>.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filterType"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-filterType:

      .. rst-class:: ansible-option-title

      **filterType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filterType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FilterType query parameter. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the parameter.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise_hostname}}.

      If it is false, it sends the requests to https://{{ise_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_csrf_token"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_uses_csrf_token:

      .. rst-class:: ansible-option-title

      **ise_uses_csrf_token**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_csrf_token" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in 3.0.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether we send the CSRF token to ISE's ERS APIs.

      If it is True, the SDK assumes that your ISE CSRF Check is enabled.

      If it is True, it assumes you need the SDK to manage the CSRF token automatically for you.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-page"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-page:

      .. rst-class:: ansible-option-title

      **page**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-page" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Page query parameter. Page number.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-size"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-size:

      .. rst-class:: ansible-option-title

      **size**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-size" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Size query parameter. Number of objects returned per page.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortasc"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-sortasc:

      .. rst-class:: ansible-option-title

      **sortasc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortasc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortasc query parameter. Sort asc.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortdsc"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-sortdsc:

      .. rst-class:: ansible-option-title

      **sortdsc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortdsc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortdsc query parameter. Sort desc.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are self_registered_portal.SelfRegisteredPortal.get_self_registered_portal_by_id, self_registered_portal.SelfRegisteredPortal.get_self_registered_portals_generator,
   - Paths used are get /ers/config/selfregportal, get /ers/config/selfregportal/{id},
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Self Registered Portal
      cisco.ise.self_registered_portal_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        page: 1
        size: 20
        sortasc: string
        sortdsc: string
        filter: []
        filterType: AND
      register: result

    - name: Get Self Registered Portal by id
      cisco.ise.self_registered_portal_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        id: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"id\\": \\"string\\",\\n  \\"name\\": \\"string\\",\\n  \\"description\\": \\"string\\",\\n  \\"portalType\\": \\"string\\",\\n  \\"portalTestUrl\\": \\"string\\",\\n  \\"settings\\": {\\n    \\"portalSettings\\": {\\n      \\"httpsPort\\": 0,\\n      \\"allowedInterfaces\\": [\\n        \\"string\\"\\n      ],\\n      \\"certificateGroupTag\\": \\"string\\",\\n      \\"authenticationMethod\\": \\"string\\",\\n      \\"assignedGuestTypeForEmployee\\": \\"string\\",\\n      \\"displayLang\\": \\"string\\",\\n      \\"fallbackLanguage\\": \\"string\\",\\n      \\"alwaysUsedLanguage\\": \\"string\\"\\n    },\\n    \\"loginPageSettings\\": {\\n      \\"requireAccessCode\\": true,\\n      \\"maxFailedAttemptsBeforeRateLimit\\": 0,\\n      \\"timeBetweenLoginsDuringRateLimit\\": 0,\\n      \\"includeAup\\": true,\\n      \\"aupDisplay\\": \\"string\\",\\n      \\"requireAupAcceptance\\": true,\\n      \\"accessCode\\": \\"string\\",\\n      \\"allowGuestToCreateAccounts\\": true,\\n      \\"allowForgotPassword\\": true,\\n      \\"allowGuestToChangePassword\\": true,\\n      \\"allowAlternateGuestPortal\\": true,\\n      \\"alternateGuestPortal\\": \\"string\\",\\n      \\"allowGuestToUseSocialAccounts\\": true,\\n      \\"allowShowGuestForm\\": true,\\n      \\"socialConfigs\\": [\\n        {\\n          \\"socialMediaType\\": \\"string\\",\\n          \\"socialMediaValue\\": \\"string\\"\\n        }\\n      ]\\n    },\\n    \\"selfRegPageSettings\\": {\\n      \\"assignGuestsToGuestType\\": \\"string\\",\\n      \\"accountValidityDuration\\": 0,\\n      \\"accountValidityTimeUnits\\": \\"string\\",\\n      \\"requireRegistrationCode\\": true,\\n      \\"registrationCode\\": \\"string\\",\\n      \\"fieldUserName\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldFirstName\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldLastName\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldEmailAddr\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldPhoneNo\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldCompany\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldLocation\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"selectableLocations\\": [\\n        \\"string\\"\\n      ],\\n      \\"fieldSmsProvider\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"selectableSmsProviders\\": [\\n        \\"string\\"\\n      ],\\n      \\"fieldPersonBeingVisited\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"fieldReasonForVisit\\": {\\n        \\"include\\": true,\\n        \\"require\\": true\\n      },\\n      \\"includeAup\\": true,\\n      \\"aupDisplay\\": \\"string\\",\\n      \\"requireAupAcceptance\\": true,\\n      \\"enableGuestEmailWhitelist\\": true,\\n      \\"guestEmailWhitelistDomains\\": [\\n        \\"string\\"\\n      ],\\n      \\"enableGuestEmailBlacklist\\": true,\\n      \\"guestEmailBlacklistDomains\\": [\\n        \\"string\\"\\n      ],\\n      \\"requireGuestApproval\\": true,\\n      \\"autoLoginSelfWait\\": true,\\n      \\"autoLoginTimePeriod\\": 0,\\n      \\"allowGraceAccess\\": true,\\n      \\"graceAccessExpireInterval\\": 0,\\n      \\"graceAccessSendAccountExpiration\\": true,\\n      \\"sendApprovalRequestTo\\": \\"string\\",\\n      \\"approvalEmailAddresses\\": \\"string\\",\\n      \\"postRegistrationRedirect\\": \\"string\\",\\n      \\"postRegistrationRedirectUrl\\": \\"string\\",\\n      \\"credentialNotificationUsingEmail\\": true,\\n      \\"credentialNotificationUsingSms\\": true,\\n      \\"approveDenyLinksValidFor\\": 0,\\n      \\"approveDenyLinksTimeUnits\\": \\"string\\",\\n      \\"requireApproverToAuthenticate\\": true,\\n      \\"authenticateSponsorsUsingPortalList\\": true,\\n      \\"sponsorPortalList\\": []\\n    },\\n    \\"selfRegSuccessSettings\\": {\\n      \\"includeUserName\\": true,\\n      \\"includePassword\\": true,\\n      \\"includeFirstName\\": true,\\n      \\"includeLastName\\": true,\\n      \\"includeEmailAddr\\": true,\\n      \\"includePhoneNo\\": true,\\n      \\"includeCompany\\": true,\\n      \\"includeLocation\\": true,\\n      \\"includeSmsProvider\\": true,\\n      \\"includePersonBeingVisited\\": true,\\n      \\"includeReasonForVisit\\": true,\\n      \\"allowGuestSendSelfUsingPrint\\": true,\\n      \\"allowGuestSendSelfUsingEmail\\": true,\\n      \\"allowGuestSendSelfUsingSms\\": true,\\n      \\"includeAup\\": true,\\n      \\"aupOnPage\\": true,\\n      \\"requireAupAcceptance\\": true,\\n      \\"requireAupScrolling\\": true,\\n      \\"allowGuestLoginFromSelfregSuccessPage\\": true\\n    },\\n    \\"aupSettings\\": {\\n      \\"includeAup\\": true,\\n      \\"useDiffAupForEmployees\\": true,\\n      \\"skipAupForEmployees\\": true,\\n      \\"requireScrolling\\": true,\\n      \\"requireAupScrolling\\": true,\\n      \\"displayFrequency\\": \\"string\\",\\n      \\"displayFrequencyIntervalDays\\": 0\\n    },\\n    \\"guestChangePasswordSettings\\": {\\n      \\"allowChangePasswdAtFirstLogin\\": true\\n    },\\n    \\"guestDeviceRegistrationSettings\\": {\\n      \\"autoRegisterGuestDevices\\": true,\\n      \\"allowGuestsToRegisterDevices\\": true\\n    },\\n    \\"byodSettings\\": {\\n      \\"byodWelcomeSettings\\": {\\n        \\"enableBYOD\\": true,\\n        \\"enableGuestAccess\\": true,\\n        \\"requireMDM\\": true,\\n        \\"includeAup\\": true,\\n        \\"aupDisplay\\": \\"string\\",\\n        \\"requireAupAcceptance\\": true,\\n        \\"requireScrolling\\": true\\n      },\\n      \\"byodRegistrationSettings\\": {\\n        \\"showDeviceID\\": true,\\n        \\"endPointIdentityGroupId\\": \\"string\\"\\n      },\\n      \\"byodRegistrationSuccessSettings\\": {\\n        \\"successRedirect\\": \\"string\\",\\n        \\"redirectUrl\\": \\"string\\"\\n      }\\n    },\\n    \\"postLoginBannerSettings\\": {\\n      \\"includePostAccessBanner\\": true\\n    },\\n    \\"postAccessBannerSettings\\": {\\n      \\"includePostAccessBanner\\": true\\n    },\\n    \\"authSuccessSettings\\": {\\n      \\"successRedirect\\": \\"string\\",\\n      \\"redirectUrl\\": \\"string\\"\\n    },\\n    \\"supportInfoSettings\\": {\\n      \\"includeSupportInfoPage\\": true,\\n      \\"includeMacAddr\\": true,\\n      \\"includeIpAddress\\": true,\\n      \\"includeBrowserUserAgent\\": true,\\n      \\"includePolicyServer\\": true,\\n      \\"includeFailureCode\\": true,\\n      \\"emptyFieldDisplay\\": \\"string\\",\\n      \\"defaultEmptyFieldValue\\": \\"string\\"\\n    }\\n  },\\n  \\"customizations\\": {\\n    \\"portalTheme\\": {\\n      \\"id\\": \\"string\\",\\n      \\"name\\": \\"string\\",\\n      \\"themeData\\": \\"string\\"\\n    },\\n    \\"portalTweakSettings\\": {\\n      \\"bannerColor\\": \\"string\\",\\n      \\"bannerTextColor\\": \\"string\\",\\n      \\"pageBackgroundColor\\": \\"string\\",\\n      \\"pageLabelAndTextColor\\": \\"string\\"\\n    },\\n    \\"language\\": {\\n      \\"viewLanguage\\": \\"string\\"\\n    },\\n    \\"globalCustomizations\\": {\\n      \\"mobileLogoImage\\": {\\n        \\"data\\": \\"string\\"\\n      },\\n      \\"desktopLogoImage\\": {\\n        \\"data\\": \\"string\\"\\n      },\\n      \\"bannerImage\\": {\\n        \\"data\\": \\"string\\"\\n      },\\n      \\"backgroundImage\\": {\\n        \\"data\\": \\"string\\"\\n      },\\n      \\"bannerTitle\\": \\"string\\",\\n      \\"contactText\\": \\"string\\",\\n      \\"footerElement\\": \\"string\\"\\n    },\\n    \\"pageCustomizations\\": {\\n      \\"data\\": [\\n        {\\n          \\"key\\": \\"string\\",\\n          \\"value\\": \\"string\\"\\n        }\\n      ]\\n    }\\n  },\\n  \\"link\\": {\\n    \\"rel\\": \\"string\\",\\n    \\"href\\": \\"string\\",\\n    \\"type\\": \\"string\\"\\n  }\\n}\\n"


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_responses"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__return-ise_responses:

      .. rst-class:: ansible-option-title

      **ise_responses**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_responses" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      :ansible-option-versionadded:`added in 1.1.0 of cisco.ise`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "[\\n  {\\n    \\"id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"portalType\\": \\"string\\",\\n    \\"portalTestUrl\\": \\"string\\",\\n    \\"settings\\": {\\n      \\"portalSettings\\": {\\n        \\"httpsPort\\": 0,\\n        \\"allowedInterfaces\\": [\\n          \\"string\\"\\n        ],\\n        \\"certificateGroupTag\\": \\"string\\",\\n        \\"authenticationMethod\\": \\"string\\",\\n        \\"assignedGuestTypeForEmployee\\": \\"string\\",\\n        \\"displayLang\\": \\"string\\",\\n        \\"fallbackLanguage\\": \\"string\\",\\n        \\"alwaysUsedLanguage\\": \\"string\\"\\n      },\\n      \\"loginPageSettings\\": {\\n        \\"requireAccessCode\\": true,\\n        \\"maxFailedAttemptsBeforeRateLimit\\": 0,\\n        \\"timeBetweenLoginsDuringRateLimit\\": 0,\\n        \\"includeAup\\": true,\\n        \\"aupDisplay\\": \\"string\\",\\n        \\"requireAupAcceptance\\": true,\\n        \\"accessCode\\": \\"string\\",\\n        \\"allowGuestToCreateAccounts\\": true,\\n        \\"allowForgotPassword\\": true,\\n        \\"allowGuestToChangePassword\\": true,\\n        \\"allowAlternateGuestPortal\\": true,\\n        \\"alternateGuestPortal\\": \\"string\\",\\n        \\"allowGuestToUseSocialAccounts\\": true,\\n        \\"allowShowGuestForm\\": true,\\n        \\"socialConfigs\\": [\\n          {\\n            \\"socialMediaType\\": \\"string\\",\\n            \\"socialMediaValue\\": \\"string\\"\\n          }\\n        ]\\n      },\\n      \\"selfRegPageSettings\\": {\\n        \\"assignGuestsToGuestType\\": \\"string\\",\\n        \\"accountValidityDuration\\": 0,\\n        \\"accountValidityTimeUnits\\": \\"string\\",\\n        \\"requireRegistrationCode\\": true,\\n        \\"registrationCode\\": \\"string\\",\\n        \\"fieldUserName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldFirstName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldLastName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldEmailAddr\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldPhoneNo\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldCompany\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldLocation\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"selectableLocations\\": [\\n          \\"string\\"\\n        ],\\n        \\"fieldSmsProvider\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"selectableSmsProviders\\": [\\n          \\"string\\"\\n        ],\\n        \\"fieldPersonBeingVisited\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldReasonForVisit\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"includeAup\\": true,\\n        \\"aupDisplay\\": \\"string\\",\\n        \\"requireAupAcceptance\\": true,\\n        \\"enableGuestEmailWhitelist\\": true,\\n        \\"guestEmailWhitelistDomains\\": [\\n          \\"string\\"\\n        ],\\n        \\"enableGuestEmailBlacklist\\": true,\\n        \\"guestEmailBlacklistDomains\\": [\\n          \\"string\\"\\n        ],\\n        \\"requireGuestApproval\\": true,\\n        \\"autoLoginSelfWait\\": true,\\n        \\"autoLoginTimePeriod\\": 0,\\n        \\"allowGraceAccess\\": true,\\n        \\"graceAccessExpireInterval\\": 0,\\n        \\"graceAccessSendAccountExpiration\\": true,\\n        \\"sendApprovalRequestTo\\": \\"string\\",\\n        \\"approvalEmailAddresses\\": \\"string\\",\\n        \\"postRegistrationRedirect\\": \\"string\\",\\n        \\"postRegistrationRedirectUrl\\": \\"string\\",\\n        \\"credentialNotificationUsingEmail\\": true,\\n        \\"credentialNotificationUsingSms\\": true,\\n        \\"approveDenyLinksValidFor\\": 0,\\n        \\"approveDenyLinksTimeUnits\\": \\"string\\",\\n        \\"requireApproverToAuthenticate\\": true,\\n        \\"authenticateSponsorsUsingPortalList\\": true,\\n        \\"sponsorPortalList\\": []\\n      },\\n      \\"selfRegSuccessSettings\\": {\\n        \\"includeUserName\\": true,\\n        \\"includePassword\\": true,\\n        \\"includeFirstName\\": true,\\n        \\"includeLastName\\": true,\\n        \\"includeEmailAddr\\": true,\\n        \\"includePhoneNo\\": true,\\n        \\"includeCompany\\": true,\\n        \\"includeLocation\\": true,\\n        \\"includeSmsProvider\\": true,\\n        \\"includePersonBeingVisited\\": true,\\n        \\"includeReasonForVisit\\": true,\\n        \\"allowGuestSendSelfUsingPrint\\": true,\\n        \\"allowGuestSendSelfUsingEmail\\": true,\\n        \\"allowGuestSendSelfUsingSms\\": true,\\n        \\"includeAup\\": true,\\n        \\"aupOnPage\\": true,\\n        \\"requireAupAcceptance\\": true,\\n        \\"requireAupScrolling\\": true,\\n        \\"allowGuestLoginFromSelfregSuccessPage\\": true\\n      },\\n      \\"aupSettings\\": {\\n        \\"includeAup\\": true,\\n        \\"useDiffAupForEmployees\\": true,\\n        \\"skipAupForEmployees\\": true,\\n        \\"requireScrolling\\": true,\\n        \\"requireAupScrolling\\": true,\\n        \\"displayFrequency\\": \\"string\\",\\n        \\"displayFrequencyIntervalDays\\": 0\\n      },\\n      \\"guestChangePasswordSettings\\": {\\n        \\"allowChangePasswdAtFirstLogin\\": true\\n      },\\n      \\"guestDeviceRegistrationSettings\\": {\\n        \\"autoRegisterGuestDevices\\": true,\\n        \\"allowGuestsToRegisterDevices\\": true\\n      },\\n      \\"byodSettings\\": {\\n        \\"byodWelcomeSettings\\": {\\n          \\"enableBYOD\\": true,\\n          \\"enableGuestAccess\\": true,\\n          \\"requireMDM\\": true,\\n          \\"includeAup\\": true,\\n          \\"aupDisplay\\": \\"string\\",\\n          \\"requireAupAcceptance\\": true,\\n          \\"requireScrolling\\": true\\n        },\\n        \\"byodRegistrationSettings\\": {\\n          \\"showDeviceID\\": true,\\n          \\"endPointIdentityGroupId\\": \\"string\\"\\n        },\\n        \\"byodRegistrationSuccessSettings\\": {\\n          \\"successRedirect\\": \\"string\\",\\n          \\"redirectUrl\\": \\"string\\"\\n        }\\n      },\\n      \\"postLoginBannerSettings\\": {\\n        \\"includePostAccessBanner\\": true\\n      },\\n      \\"postAccessBannerSettings\\": {\\n        \\"includePostAccessBanner\\": true\\n      },\\n      \\"authSuccessSettings\\": {\\n        \\"successRedirect\\": \\"string\\",\\n        \\"redirectUrl\\": \\"string\\"\\n      },\\n      \\"supportInfoSettings\\": {\\n        \\"includeSupportInfoPage\\": true,\\n        \\"includeMacAddr\\": true,\\n        \\"includeIpAddress\\": true,\\n        \\"includeBrowserUserAgent\\": true,\\n        \\"includePolicyServer\\": true,\\n        \\"includeFailureCode\\": true,\\n        \\"emptyFieldDisplay\\": \\"string\\",\\n        \\"defaultEmptyFieldValue\\": \\"string\\"\\n      }\\n    },\\n    \\"customizations\\": {\\n      \\"portalTheme\\": {\\n        \\"id\\": \\"string\\",\\n        \\"name\\": \\"string\\",\\n        \\"themeData\\": \\"string\\"\\n      },\\n      \\"portalTweakSettings\\": {\\n        \\"bannerColor\\": \\"string\\",\\n        \\"bannerTextColor\\": \\"string\\",\\n        \\"pageBackgroundColor\\": \\"string\\",\\n        \\"pageLabelAndTextColor\\": \\"string\\"\\n      },\\n      \\"language\\": {\\n        \\"viewLanguage\\": \\"string\\"\\n      },\\n      \\"globalCustomizations\\": {\\n        \\"mobileLogoImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"desktopLogoImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"bannerImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"backgroundImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"bannerTitle\\": \\"string\\",\\n        \\"contactText\\": \\"string\\",\\n        \\"footerElement\\": \\"string\\"\\n      },\\n      \\"pageCustomizations\\": {\\n        \\"data\\": [\\n          {\\n            \\"key\\": \\"string\\",\\n            \\"value\\": \\"string\\"\\n          }\\n        ]\\n      }\\n    },\\n    \\"link\\": {\\n      \\"rel\\": \\"string\\",\\n      \\"href\\": \\"string\\",\\n      \\"type\\": \\"string\\"\\n    }\\n  }\\n]\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

