v2.5.12/_sources/plugins/self_registered_portal_info_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.ise.self_registered_portal_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.self_registered_portal_info module -- Information module for Self Registered Portal
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 2.5.12).

    To install it, use: :code:`ansible-galaxy collection install cisco.ise`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.ise.self_registered_portal_info_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.ise.self_registered_portal_info`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.ise 1.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Self Registered Portal.
- Get Self Registered Portal by id.
- This API allows the client to get a self registered portal by ID.
- This API allows the client to get all the self registered portals.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.ise.self_registered_portal_info_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk \>= 2.0.8
- python \>= 3.5






.. Options

Parameters
----------


.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filter"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-filter:

      .. rst-class:: ansible-option-title

      **filter**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filter" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Filter query parameter. \*\*Simple filtering\*\* should be available through the filter query string parameter. The structure of a filter is a triplet of field operator and value separated with dots. More than one filter can be sent. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the "filterType=or" query string parameter.
          

      Each resource Data model description should specify if an attribute is a filtered field.

      The 'EQ' operator describes 'Equals'.

      The 'NEQ' operator describes 'Not Equals'.

      The 'GT' operator describes 'Greater Than'.

      The 'LT' operator describes 'Less Than'.

      The 'STARTSW' operator describes 'Starts With'.

      The 'NSTARTSW' operator describes 'Not Starts With'.

      The 'ENDSW' operator describes 'Ends With'.

      The 'NENDSW' operator describes 'Not Ends With'.

      The 'CONTAINS' operator describes 'Contains'.

      The 'NCONTAINS' operator describes 'Not Contains'.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filterType"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-filtertype:

      .. rst-class:: ansible-option-title

      **filterType**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filterType" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FilterType query parameter. The logical operator common to ALL filter criteria will be by default AND, and can be changed by using the parameter.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_debug"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_debug:

      .. rst-class:: ansible-option-title

      **ise_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_hostname"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_hostname:

      .. rst-class:: ansible-option-title

      **ise_hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_password"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_password:

      .. rst-class:: ansible-option-title

      **ise_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_username"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_username:

      .. rst-class:: ansible-option-title

      **ise_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Identity Services Engine username to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_api_gateway"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_uses_api_gateway:

      .. rst-class:: ansible-option-title

      **ise_uses_api_gateway**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_api_gateway" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether to use the Identity Services Engine's API Gateway to send requests.

      If it is true, it uses the ISE's API Gateway and sends requests to https://{{ise\_hostname}}.

      If it is false, it sends the requests to https://{{ise\_hostname}}:{{port}}, where the port value depends on the Service used (ERS, Mnt, UI, PxGrid).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_uses_csrf_token"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_uses_csrf_token:

      .. rst-class:: ansible-option-title

      **ise_uses_csrf_token**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_uses_csrf_token" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      :ansible-option-versionadded:`added in cisco.ise 3.0.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag that informs the SDK whether we send the CSRF token to ISE's ERS APIs.

      If it is True, the SDK assumes that your ISE CSRF Check is enabled.

      If it is True, it assumes you need the SDK to manage the CSRF token automatically for you.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_verify"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_verify:

      .. rst-class:: ansible-option-title

      **ise_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_version"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_version:

      .. rst-class:: ansible-option-title

      **ise_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Identity Services Engine to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1\_Patch\_1"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ise_wait_on_rate_limit"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-ise_wait_on_rate_limit:

      .. rst-class:: ansible-option-title

      **ise_wait_on_rate_limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ise_wait_on_rate_limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Identity Services Engine SDK to enable automatic rate-limit handling.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-page"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-page:

      .. rst-class:: ansible-option-title

      **page**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-page" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Page query parameter. Page number.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-size"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-size:

      .. rst-class:: ansible-option-title

      **size**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-size" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Size query parameter. Number of objects returned per page.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortasc"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-sortasc:

      .. rst-class:: ansible-option-title

      **sortasc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortasc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortasc query parameter. Sort asc.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortdsc"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__parameter-sortdsc:

      .. rst-class:: ansible-option-title

      **sortdsc**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortdsc" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sortdsc query parameter. Sort desc.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are self\_registered\_portal.SelfRegisteredPortal.get\_self\_registered\_portal\_by\_id, self\_registered\_portal.SelfRegisteredPortal.get\_self\_registered\_portals\_generator,
   - Paths used are get /ers/config/selfregportal, get /ers/config/selfregportal/{id},
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco ISE SDK
   - The parameters starting with ise\_ are used by the Cisco ISE Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco ISE documentation for SelfRegisteredPortal <https://developer.cisco.com/docs/identity-services-engine/v1/#!selfregportal>`_
       Complete reference of the SelfRegisteredPortal API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Self Registered Portal
      cisco.ise.self_registered_portal_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        page: 1
        size: 20
        sortasc: string
        sortdsc: string
        filter: []
        filterType: AND
      register: result

    - name: Get Self Registered Portal by id
      cisco.ise.self_registered_portal_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        id: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_response"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__return-ise_response:

      .. rst-class:: ansible-option-title

      **ise_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"customizations": {"globalCustomizations": {"backgroundImage": {"data": "string"}, "bannerImage": {"data": "string"}, "bannerTitle": "string", "contactText": "string", "desktopLogoImage": {"data": "string"}, "footerElement": "string", "mobileLogoImage": {"data": "string"}}, "language": {"viewLanguage": "string"}, "pageCustomizations": {"data": [{"key": "string", "value": "string"}]}, "portalTheme": {"id": "string", "name": "string", "themeData": "string"}, "portalTweakSettings": {"bannerColor": "string", "bannerTextColor": "string", "pageBackgroundColor": "string", "pageLabelAndTextColor": "string"}}, "description": "string", "id": "string", "link": {"href": "string", "rel": "string", "type": "string"}, "name": "string", "portalTestUrl": "string", "portalType": "string", "settings": {"aupSettings": {"displayFrequency": "string", "displayFrequencyIntervalDays": 0, "includeAup": true, "requireAupScrolling": true, "requireScrolling": true, "skipAupForEmployees": true, "useDiffAupForEmployees": true}, "authSuccessSettings": {"redirectUrl": "string", "successRedirect": "string"}, "byodSettings": {"byodRegistrationSettings": {"endPointIdentityGroupId": "string", "showDeviceID": true}, "byodRegistrationSuccessSettings": {"redirectUrl": "string", "successRedirect": "string"}, "byodWelcomeSettings": {"aupDisplay": "string", "enableBYOD": true, "enableGuestAccess": true, "includeAup": true, "requireAupAcceptance": true, "requireMDM": true, "requireScrolling": true}}, "guestChangePasswordSettings": {"allowChangePasswdAtFirstLogin": true}, "guestDeviceRegistrationSettings": {"allowGuestsToRegisterDevices": true, "autoRegisterGuestDevices": true}, "loginPageSettings": {"accessCode": "string", "allowAlternateGuestPortal": true, "allowForgotPassword": true, "allowGuestToChangePassword": true, "allowGuestToCreateAccounts": true, "allowGuestToUseSocialAccounts": true, "allowShowGuestForm": true, "alternateGuestPortal": "string", "aupDisplay": "string", "includeAup": true, "maxFailedAttemptsBeforeRateLimit": 0, "requireAccessCode": true, "requireAupAcceptance": true, "socialConfigs": [{"socialMediaType": "string", "socialMediaValue": "string"}], "timeBetweenLoginsDuringRateLimit": 0}, "portalSettings": {"allowedInterfaces": ["string"], "alwaysUsedLanguage": "string", "assignedGuestTypeForEmployee": "string", "authenticationMethod": "string", "certificateGroupTag": "string", "displayLang": "string", "fallbackLanguage": "string", "httpsPort": 0}, "postAccessBannerSettings": {"includePostAccessBanner": true}, "postLoginBannerSettings": {"includePostAccessBanner": true}, "selfRegPageSettings": {"accountValidityDuration": 0, "accountValidityTimeUnits": "string", "allowGraceAccess": true, "approvalEmailAddresses": "string", "approveDenyLinksTimeUnits": "string", "approveDenyLinksValidFor": 0, "assignGuestsToGuestType": "string", "aupDisplay": "string", "authenticateSponsorsUsingPortalList": true, "autoLoginSelfWait": true, "autoLoginTimePeriod": 0, "credentialNotificationUsingEmail": true, "credentialNotificationUsingSms": true, "enableGuestEmailBlacklist": true, "enableGuestEmailWhitelist": true, "fieldCompany": {"include": true, "require": true}, "fieldEmailAddr": {"include": true, "require": true}, "fieldFirstName": {"include": true, "require": true}, "fieldLastName": {"include": true, "require": true}, "fieldLocation": {"include": true, "require": true}, "fieldPersonBeingVisited": {"include": true, "require": true}, "fieldPhoneNo": {"include": true, "require": true}, "fieldReasonForVisit": {"include": true, "require": true}, "fieldSmsProvider": {"include": true, "require": true}, "fieldUserName": {"include": true, "require": true}, "graceAccessExpireInterval": 0, "graceAccessSendAccountExpiration": true, "guestEmailBlacklistDomains": ["string"], "guestEmailWhitelistDomains": ["string"], "includeAup": true, "postRegistrationRedirect": "string", "postRegistrationRedirectUrl": "string", "registrationCode": "string", "requireApproverToAuthenticate": true, "requireAupAcceptance": true, "requireGuestApproval": true, "requireRegistrationCode": true, "selectableLocations": ["string"], "selectableSmsProviders": ["string"], "sendApprovalRequestTo": "string", "sponsorPortalList": ["string"]}, "selfRegSuccessSettings": {"allowGuestLoginFromSelfregSuccessPage": true, "allowGuestSendSelfUsingEmail": true, "allowGuestSendSelfUsingPrint": true, "allowGuestSendSelfUsingSms": true, "aupOnPage": true, "includeAup": true, "includeCompany": true, "includeEmailAddr": true, "includeFirstName": true, "includeLastName": true, "includeLocation": true, "includePassword": true, "includePersonBeingVisited": true, "includePhoneNo": true, "includeReasonForVisit": true, "includeSmsProvider": true, "includeUserName": true, "requireAupAcceptance": true, "requireAupScrolling": true}, "supportInfoSettings": {"defaultEmptyFieldValue": "string", "emptyFieldDisplay": "string", "includeBrowserUserAgent": true, "includeFailureCode": true, "includeIpAddress": true, "includeMacAddr": true, "includePolicyServer": true, "includeSupportInfoPage": true}}}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-ise_responses"></div>

      .. _ansible_collections.cisco.ise.self_registered_portal_info_module__return-ise_responses:

      .. rst-class:: ansible-option-title

      **ise_responses**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-ise_responses" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      :ansible-option-versionadded:`added in cisco.ise 1.1.0`


      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco ISE Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"[\\n  {\\n    \\"id\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"portalType\\": \\"string\\",\\n    \\"portalTestUrl\\": \\"string\\",\\n    \\"settings\\": {\\n      \\"portalSettings\\": {\\n        \\"httpsPort\\": 0,\\n        \\"allowedInterfaces\\": [\\n          \\"string\\"\\n        ],\\n        \\"certificateGroupTag\\": \\"string\\",\\n        \\"authenticationMethod\\": \\"string\\",\\n        \\"assignedGuestTypeForEmployee\\": \\"string\\",\\n        \\"displayLang\\": \\"string\\",\\n        \\"fallbackLanguage\\": \\"string\\",\\n        \\"alwaysUsedLanguage\\": \\"string\\"\\n      },\\n      \\"loginPageSettings\\": {\\n        \\"requireAccessCode\\": true,\\n        \\"maxFailedAttemptsBeforeRateLimit\\": 0,\\n        \\"timeBetweenLoginsDuringRateLimit\\": 0,\\n        \\"includeAup\\": true,\\n        \\"aupDisplay\\": \\"string\\",\\n        \\"requireAupAcceptance\\": true,\\n        \\"accessCode\\": \\"string\\",\\n        \\"allowGuestToCreateAccounts\\": true,\\n        \\"allowForgotPassword\\": true,\\n        \\"allowGuestToChangePassword\\": true,\\n        \\"allowAlternateGuestPortal\\": true,\\n        \\"alternateGuestPortal\\": \\"string\\",\\n        \\"allowGuestToUseSocialAccounts\\": true,\\n        \\"allowShowGuestForm\\": true,\\n        \\"socialConfigs\\": [\\n          {\\n            \\"socialMediaType\\": \\"string\\",\\n            \\"socialMediaValue\\": \\"string\\"\\n          }\\n        ]\\n      },\\n      \\"selfRegPageSettings\\": {\\n        \\"assignGuestsToGuestType\\": \\"string\\",\\n        \\"accountValidityDuration\\": 0,\\n        \\"accountValidityTimeUnits\\": \\"string\\",\\n        \\"requireRegistrationCode\\": true,\\n        \\"registrationCode\\": \\"string\\",\\n        \\"fieldUserName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldFirstName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldLastName\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldEmailAddr\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldPhoneNo\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldCompany\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldLocation\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"selectableLocations\\": [\\n          \\"string\\"\\n        ],\\n        \\"fieldSmsProvider\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"selectableSmsProviders\\": [\\n          \\"string\\"\\n        ],\\n        \\"fieldPersonBeingVisited\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"fieldReasonForVisit\\": {\\n          \\"include\\": true,\\n          \\"require\\": true\\n        },\\n        \\"includeAup\\": true,\\n        \\"aupDisplay\\": \\"string\\",\\n        \\"requireAupAcceptance\\": true,\\n        \\"enableGuestEmailWhitelist\\": true,\\n        \\"guestEmailWhitelistDomains\\": [\\n          \\"string\\"\\n        ],\\n        \\"enableGuestEmailBlacklist\\": true,\\n        \\"guestEmailBlacklistDomains\\": [\\n          \\"string\\"\\n        ],\\n        \\"requireGuestApproval\\": true,\\n        \\"autoLoginSelfWait\\": true,\\n        \\"autoLoginTimePeriod\\": 0,\\n        \\"allowGraceAccess\\": true,\\n        \\"graceAccessExpireInterval\\": 0,\\n        \\"graceAccessSendAccountExpiration\\": true,\\n        \\"sendApprovalRequestTo\\": \\"string\\",\\n        \\"approvalEmailAddresses\\": \\"string\\",\\n        \\"postRegistrationRedirect\\": \\"string\\",\\n        \\"postRegistrationRedirectUrl\\": \\"string\\",\\n        \\"credentialNotificationUsingEmail\\": true,\\n        \\"credentialNotificationUsingSms\\": true,\\n        \\"approveDenyLinksValidFor\\": 0,\\n        \\"approveDenyLinksTimeUnits\\": \\"string\\",\\n        \\"requireApproverToAuthenticate\\": true,\\n        \\"authenticateSponsorsUsingPortalList\\": true,\\n        \\"sponsorPortalList\\": [\\n          \\"string\\"\\n        ]\\n      },\\n      \\"selfRegSuccessSettings\\": {\\n        \\"includeUserName\\": true,\\n        \\"includePassword\\": true,\\n        \\"includeFirstName\\": true,\\n        \\"includeLastName\\": true,\\n        \\"includeEmailAddr\\": true,\\n        \\"includePhoneNo\\": true,\\n        \\"includeCompany\\": true,\\n        \\"includeLocation\\": true,\\n        \\"includeSmsProvider\\": true,\\n        \\"includePersonBeingVisited\\": true,\\n        \\"includeReasonForVisit\\": true,\\n        \\"allowGuestSendSelfUsingPrint\\": true,\\n        \\"allowGuestSendSelfUsingEmail\\": true,\\n        \\"allowGuestSendSelfUsingSms\\": true,\\n        \\"includeAup\\": true,\\n        \\"aupOnPage\\": true,\\n        \\"requireAupAcceptance\\": true,\\n        \\"requireAupScrolling\\": true,\\n        \\"allowGuestLoginFromSelfregSuccessPage\\": true\\n      },\\n      \\"aupSettings\\": {\\n        \\"includeAup\\": true,\\n        \\"useDiffAupForEmployees\\": true,\\n        \\"skipAupForEmployees\\": true,\\n        \\"requireScrolling\\": true,\\n        \\"requireAupScrolling\\": true,\\n        \\"displayFrequency\\": \\"string\\",\\n        \\"displayFrequencyIntervalDays\\": 0\\n      },\\n      \\"guestChangePasswordSettings\\": {\\n        \\"allowChangePasswdAtFirstLogin\\": true\\n      },\\n      \\"guestDeviceRegistrationSettings\\": {\\n        \\"autoRegisterGuestDevices\\": true,\\n        \\"allowGuestsToRegisterDevices\\": true\\n      },\\n      \\"byodSettings\\": {\\n        \\"byodWelcomeSettings\\": {\\n          \\"enableBYOD\\": true,\\n          \\"enableGuestAccess\\": true,\\n          \\"requireMDM\\": true,\\n          \\"includeAup\\": true,\\n          \\"aupDisplay\\": \\"string\\",\\n          \\"requireAupAcceptance\\": true,\\n          \\"requireScrolling\\": true\\n        },\\n        \\"byodRegistrationSettings\\": {\\n          \\"showDeviceID\\": true,\\n          \\"endPointIdentityGroupId\\": \\"string\\"\\n        },\\n        \\"byodRegistrationSuccessSettings\\": {\\n          \\"successRedirect\\": \\"string\\",\\n          \\"redirectUrl\\": \\"string\\"\\n        }\\n      },\\n      \\"postLoginBannerSettings\\": {\\n        \\"includePostAccessBanner\\": true\\n      },\\n      \\"postAccessBannerSettings\\": {\\n        \\"includePostAccessBanner\\": true\\n      },\\n      \\"authSuccessSettings\\": {\\n        \\"successRedirect\\": \\"string\\",\\n        \\"redirectUrl\\": \\"string\\"\\n      },\\n      \\"supportInfoSettings\\": {\\n        \\"includeSupportInfoPage\\": true,\\n        \\"includeMacAddr\\": true,\\n        \\"includeIpAddress\\": true,\\n        \\"includeBrowserUserAgent\\": true,\\n        \\"includePolicyServer\\": true,\\n        \\"includeFailureCode\\": true,\\n        \\"emptyFieldDisplay\\": \\"string\\",\\n        \\"defaultEmptyFieldValue\\": \\"string\\"\\n      }\\n    },\\n    \\"customizations\\": {\\n      \\"portalTheme\\": {\\n        \\"id\\": \\"string\\",\\n        \\"name\\": \\"string\\",\\n        \\"themeData\\": \\"string\\"\\n      },\\n      \\"portalTweakSettings\\": {\\n        \\"bannerColor\\": \\"string\\",\\n        \\"bannerTextColor\\": \\"string\\",\\n        \\"pageBackgroundColor\\": \\"string\\",\\n        \\"pageLabelAndTextColor\\": \\"string\\"\\n      },\\n      \\"language\\": {\\n        \\"viewLanguage\\": \\"string\\"\\n      },\\n      \\"globalCustomizations\\": {\\n        \\"mobileLogoImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"desktopLogoImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"bannerImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"backgroundImage\\": {\\n          \\"data\\": \\"string\\"\\n        },\\n        \\"bannerTitle\\": \\"string\\",\\n        \\"contactText\\": \\"string\\",\\n        \\"footerElement\\": \\"string\\"\\n      },\\n      \\"pageCustomizations\\": {\\n        \\"data\\": [\\n          {\\n            \\"key\\": \\"string\\",\\n            \\"value\\": \\"string\\"\\n          }\\n        ]\\n      }\\n    },\\n    \\"link\\": {\\n      \\"rel\\": \\"string\\",\\n      \\"href\\": \\"string\\",\\n      \\"type\\": \\"string\\"\\n    }\\n  }\\n]\\n"`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/CiscoISE/ansible-ise/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/CiscoISE/ansible-ise" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

